# family-bank-2

./: .gitignore  LICENSE  Makefile  README.md  db.py  migrate_passwords.py  models.py  pyproject.toml  test_login.py  test_parent_creation.py
scripts/: test_client.py
src/: app.py  auth.py  client.py
tests/: test_auth.py  test_db.py  test_parent_verification.py
